2004-08-18  Don Allingham  <dallingham@users.sourceforge.net>
	* src/accent.py: provide sorting on i18n characters without 
	accents
	* src/Makefile.am: add accent.py to list

2004-08-17  Alex Roitman  <shura@alex.neuro.umn.edu>
	* misc: Remove autogenerated files. Update .cvsignore files.

2004-08-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelImage.py: remove PIL
	* src/Imgmanip.py: remove PIL
	* src/MediaView.py: remove PIL
	* src/accent.py: support of unaccenting characters for comparison,
	and sorting
	* src/RelLib.py: build sort name using unaccented version
	* src/PeopleView.py: get bold working again
	* src/PeopleModel.py: sort using unaccented characters

2004-08-17  Tim Waugh  <twaugh@redhat.com>
	* src/FamilyView.py (spouse_changed): Update display.

2004-08-16  Tim Waugh  <twaugh@redhat.com>
	* src/gramps_main.py (__init__): Update display after initialization.
	This fixes a display problem when family view is the default.
	* src/RelLib.py: Fixed typo.
	* gramps.spec.in, gramps-mdk.spec.in: Fixed.
	* src/data/gramps.desktop: Fixed.
	* src/data/Makefile.am: Fix 'distcheck' as much as possible.

2004-08-15  Tim Waugh  <twaugh@redhat.com>
	* src/data/Makefile.am: Make 'distcheck' get further.
	* src/Makefile.am: Removed src/Find.py.

2004-08-12  Don Allingham  <dallingham@users.sourceforge.net>
	* various: Updated cleaned up API

2004-08-11  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GenericFilter.py: fixed find/get_family_from_handle
	* src/WriteGedcom.py: fixed find/get_family_from_handle
	* src/AddrEdit.py: setCountry -> set_country
	* src/RelLib.py: Add concept of PrimaryObject
	* src/GrampsDbBase.py: add local constants
	* src/ReadGedcom.py: support new API

2004-08-11  Tim Waugh  <twaugh@redhat.com>
	* src/GrampsDbBase.py: Fixed some missed str()s.

2004-08-11  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Makefile.am: Ship new files: GrampsDbBase.py, GrampsXMLDB.py,
	and GrampsGEDDB.py. 
