@@ -1,3 +1,7 @@
+2004-08-18  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* configure.in: Check for pygtk instead of pygtk-dev.
+	* src/accent.py: Replace unknown chars with "?". 
+
 2004-08-18  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/accent.py: provide sorting on i18n characters without 
 	accents
